# nomad-parser-dmft

./: .cruft.json  404.html  MANIFEST.in  README.md  index.html  mkdocs.yml  move_template_files.sh  pyproject.toml
.github/workflows/: actions.yml
docs/: index.md
explanation/: explanation.html
how_to/: contribute_to_the_documentation.html  contribute_to_this_plugin.html  install_this_plugin.html  use_this_plugin.html
reference/: references.html
search/: search_index.json
src/nomad_parser_dmft/parsers/: __init__.py
src/nomad_parser_dmft/parsers/edmft/: parser.py
src/nomad_parser_dmft/parsers/edmft/legacy/: parser.py
src/nomad_parser_dmft/parsers/edmft/legacy/metainfo/: __init__.py  edmft.py
src/nomad_parser_dmft/parsers/soliddmft/: parser.py
src/nomad_parser_dmft/parsers/soliddmft/legacy/: parser.py
src/nomad_parser_dmft/parsers/soliddmft/legacy/metainfo/: __init__.py  soliddmft.py
src/nomad_parser_dmft/parsers/utils/: __init__.py  utils.py
src/nomad_parser_dmft/parsers/w2dynamics/: parser.py
src/nomad_parser_dmft/parsers/w2dynamics/legacy/: parser.py
src/nomad_parser_dmft/parsers/w2dynamics/legacy/metainfo/: __init__.py  w2dynamics.py
src/nomad_parser_dmft/schema_packages/: __init__.py  schema_package.py
tests/: test_edmftparser.py  test_soliddmftparser.py  test_w2dynamicsparser.py
tutorial/: tutorial.html
